# mihomo-mcp-server

./: .gitignore  LICENSE  README.md  __init__.py  config.py  config_manager.py  install.py  main.py  mihomo_api.py  push.py  pyproject.toml  server.py  tools_nodes.py  tools_rules.py  tools_subscriptions.py  tools_toolproxy.py  tools_versions.py
